test/arrays/compilerErrors/opCount-rank.chpl

var D = {1..3};
var A: [D] int;

writeln(A#(4,5));
