test/arrays/compilerErrors/opCount-rank.good
opCount-rank.chpl:5: error: rank mismatch in '#'
